# CppSpice

./: CMakeLists.txt  LICENSE
doc/doxygen/: Doxyfile
doc/sphinx/: conf.py  index.rst
include/CppSpice/: module.hpp
src/: module.cpp
test/: CMakeLists.txt
test/src/: test_module.cpp
